fix responsive css on mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -97,7 +97,6 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 } 
 
@@ -412,6 +411,7 @@ input[data-error]::after {
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  text-overflow: ellipsis;
 }
 .hero-content {
   padding: 51px 67px;
@@ -439,7 +439,11 @@ input[data-error]::after {
   font-size: 6rem;
   font-weight: normal;
   white-space: nowrap;
+
+  
 }
+
+
 .hero-text {
   width: 146%;
   font-weight: normal;
@@ -469,7 +473,7 @@ input[data-error]::after {
   font-size: 1rem;
   margin: 60px 0 30px;
   font-weight: bolder;
-}
+}.main-navbar 
 .hero-section > .btn-signup {
   display: none;
 }
@@ -478,7 +482,16 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
+
+@media screen and (max-width: 1000px){
+  .hero-headline{
+    font-size:3.5rem;
+  }
+}
 @media screen and (max-width: 800px) {
+  main{
+    margin : 0
+  }
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -486,7 +499,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 15px 10px;
   }
   .hero-content::after {
     content: unset;
@@ -495,12 +508,15 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
+    width: 80%;
+
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    width: 80%;
+    font-size: 1rem;
   }
   .hero-img img {
     border-radius: 10px;
@@ -528,7 +544,9 @@ footer {
 }
 
 
-
+/***
+* CSS utilisé pour le style du message d'erreur
+*/
 .error-message{
   font-size:12px;
   font-weight:400;
@@ -538,4 +556,9 @@ footer {
 
 .formData{
   margin-top: 15px;
+}
+
+.form-confirmation{
+  padding : 100px 30px;
+  display:none;
 }
